<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetings_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:gravity="center"
            android:text="@string/main_activity_greetings_text_view"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashtag"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/rgb_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789abcdef"
                android:gravity="center"
                android:hint="@string/rgb_edit_text_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/background_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/background_checkbox" />

            <CheckBox
                android:id="@+id/welcome_string_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_string_checkbox" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_random_color"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/random_color_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/change_color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/change_color_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/disco_toggle_button_description"
            android:textColor="@color/white" />

        <ToggleButton
            android:id="@+id/disco_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>